--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,8 +64,8 @@
         <activity android:name=".activity.VideoPlayerActivity" />
         <activity android:name=".activity.LiveActivity" />
         <activity android:name=".activity.VideoShootActivity" />
-        <activity android:name=".activity.DynamicActivity" />
-        <activity android:name=".activity.SysMessageActivity"></activity>
+        <activity android:name=".activity.SysMessageActivity" />
+
     </application>
 
 </manifest>
