--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -36,8 +37,10 @@
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="1106140497" />
             </intent-filter>
         </activity>
@@ -50,6 +53,7 @@
             android:name=".service.LoginService"
             android:enabled="true"
             android:exported="true" />
+
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.FindPasswordActivity" />
@@ -67,9 +71,13 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.TakePicActivity"  android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
-        <activity android:name=".activity.PicResultActivity"></activity>
+        <activity
+            android:name=".activity.TakePicActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.PicResultActivity" />
+        <activity android:name=".activity.FindPwdNextActivity" />
+        <activity android:name=".activity.RegisterNextActivity"></activity>
     </application>
 
 </manifest>
